# rotors_simulator

rotors_control/: CMakeLists.txt  package.xml  rosconsole.config
rotors_control/include/rotors_control/: body_velocity_controller.h  joystick_trjvel_controller.h  lee_position_controller.h
rotors_control/msg/: NedPosEulerAtt.msg
rotors_control/src/: main_joystick_trjvel_controller.cpp
rotors_control/src/nodes/: body_velocity_controller_node.cpp  body_velocity_controller_node.h  lee_position_controller_node.cpp  lee_position_controller_node.h  roll_pitch_yawrate_thrust_controller_node.h
rotors_description/meshes/wx250s/: WXSA-250-M-1-Base.dae  WXSA-250-M-10-Finger.dae  WXSA-250-M-2-Shoulder.dae  WXSA-250-M-3-UA.dae  WXSA-250-M-4-UF.dae  WXSA-250-M-5-LF.dae  WXSA-250-M-6-Wrist.dae  WXSA-250-M-7-Gripper.dae  WXSA-250-M-8-Gripper-Prop.dae  WXSA-250-M-9-Gripper-Bar.dae
rotors_description/urdf/: component_snippets.xacro  firefly.xacro  firefly_base.xacro  firefly_large_landing_gear.xacro  firefly_manipulator.xacro  firefly_manipulator_base.xacro  lidar_leddar_vu8.xacro  mav_generic_odometry_sensor_manipulator.gazebo  mav_with_vi_sensor.gazebo  mav_with_vi_sensor_robot_arm.gazebo  mav_with_vi_sensor_robot_arm.srdf.xacro  mav_with_vi_sensor_robot_arm.urdf.xacro  mav_with_vi_sensor_robot_arm_srdf.xacro  mav_with_vi_sensor_robot_arm_urdf.xacro  multirotor_base.xacro  multirotor_base_manipulator.xacro  vi_sensor_base.xacro
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo/config/: wx250s_gazebo_controllers.yaml
rotors_gazebo/launch/: empty_world.launch  mav.launch  mav_hovering_example_with_vi_sensor_joyvelcon.launch  mav_manipulator.launch  mav_with_joy_and_vi_sensor.launch  riverside_world.launch  spawn_mav_manipulator.launch
rotors_gazebo/resource/: body_velocity_controller_firefly.yaml  lee_controller_firefly.yaml
rotors_gazebo/worlds/: empty.world  riverside.world
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_gimbal_plugin.h  gazebo_leddar_vu8_lidar_plugin.h
rotors_gazebo_plugins/msg/: VuChunk.msg  VuInfo.msg
rotors_gazebo_plugins/src/: gazebo_gimbal_plugin.cpp  gazebo_leddar_vu8_lidar_plugin.cpp
rotors_joy_interface/: CMakeLists.txt
rotors_joy_interface/include/rotors_joy_interface/: joy_vbcmd.h
rotors_joy_interface/src/: joy.cpp  joy_vbcmd.cpp
